<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/bar_gradient_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/back_to_details"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="#FDFDFD"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/back_btn"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_white_ios_24"
                app:layout_constraintBottom_toBottomOf="@id/back"
                app:layout_constraintRight_toLeftOf="@id/back"
                app:layout_constraintTop_toTopOf="@id/back" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_recording"
        android:textColor="#FDFDFD"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="@+id/toolbar"
        app:layout_constraintRight_toRightOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"

        />


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="12dp"
        android:paddingRight="8dp"
        android:text="Title"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_title"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:text="@string/my_comment"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/et_title" />

    <EditText
        android:id="@+id/et_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:hint="@string/add_comment"
        android:maxLines="20"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/comment" />


    <ImageView
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/bar_gradient_background"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/upload_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Upload Recording"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/upload"
        app:layout_constraintTop_toTopOf="@id/upload" />

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/exoplayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@id/upload"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_comment" />

</androidx.constraintlayout.widget.ConstraintLayout>
