<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.mobileinteraction.sleip.ui.records.analysis.AnalysisResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent" >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/bar_gradient_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/back_to_horse_details"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="#FDFDFD"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/back_btn"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_white_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/video_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDBFBFBF"
        android:paddingStart="12dp"
        android:padding="@dimen/margin_2dp"
        android:text="@string/video"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/analysis_video_player"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/analysis_video_player"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:focusable="true"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/video_header" />

    <TextView
        android:id="@+id/image_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDBFBFBF"
        android:paddingStart="12dp"
        android:padding="@dimen/margin_2dp"
        android:text="@string/graphs"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/analysis_list"
        app:layout_constraintTop_toBottomOf="@id/analysis_video_player" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/analysis_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/comment_header"
        app:layout_constraintTop_toBottomOf="@+id/image_header" />

     <TextView
        android:id="@+id/comment_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DDBFBFBF"
        android:paddingStart="12dp"
        android:padding="@dimen/margin_2dp"
        android:text="@string/comment"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/comment_result"
        app:layout_constraintTop_toBottomOf="@id/analysis_list" />

    <TextView
        android:id="@+id/comment_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/comment_header"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>