<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rec_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/bar_gradient_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/back_to_records_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="#FDFDFD"
                app:layout_constraintBottom_toBottomOf="@+id/back_btn"
                app:layout_constraintLeft_toRightOf="@id/back_btn"
                app:layout_constraintTop_toTopOf="@+id/back_btn" />

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_white_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="12dp"
        android:paddingRight="8dp"
        android:text="@string/name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:text="@string/my_comment"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <TextView
        android:id="@+id/et_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/comment"
        tools:text="comments" />

    <TextView
        android:id="@+id/uploaded_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:text="@string/uploaded_date"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@+id/et_comment" />

    <TextView
        android:id="@+id/et_uploaded_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/uploaded_date"
        tools:text="@string/uploaded_date" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:text="@string/status"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/et_uploaded_date" />


    <TextView
        android:id="@+id/et_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="20dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/status"
        tools:text="@string/status" />

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/exoplayer_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/et_status" />

    <ImageView
        android:id="@+id/analysis_btn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/analysis_btn"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="View Result"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/analysis_btn"
        app:layout_constraintTop_toTopOf="@+id/analysis_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>
